sd-core/src/prettyprinter/snapshots/sd_core__prettyprinter__spartan__tests__free_vars.snap
---
source: sd-core/src/prettyprinter/spartan.rs
expression: expr.to_pretty()
---
bind x = plus(y) in
z
