sd-core/src/prettyprinter/snapshots/sd_core__prettyprinter__spartan__tests__pretty_print-8.snap
---
source: sd-core/src/prettyprinter/spartan.rs
expression: expr.to_pretty()
---
bind a1 = plus(x, x) in
bind a2 = plus(a1, x) in
bind a3 = plus(a2, x) in
bind a4 = plus(a3, x) in
bind a5 = plus(a4, x) in
bind a6 = plus(a5, x) in
bind a7 = plus(a6, x) in
bind a8 = plus(a7, x) in
bind a9 = plus(a8, x) in
bind x = plus(a9, x, a8, x, a7, x, a6, x, a5, x, a4, x, a3, x, a2, x, a1, x) in
bind a1 = plus(x, x) in
bind a2 = plus(a1, x) in
bind a3 = plus(a2, x) in
bind a4 = plus(a3, x) in
bind a5 = plus(a4, x) in
bind a6 = plus(a5, x) in
bind a7 = plus(a6, x) in
bind a8 = plus(a7, x) in
bind a9 = plus(a8, x) in
bind x = plus(a9, x, a8, x, a7, x, a6, x, a5, x, a4, x, a3, x, a2, x, a1, x) in
bind a1 = plus(x, x) in
bind a2 = plus(a1, x) in
bind a3 = plus(a2, x) in
bind a4 = plus(a3, x) in
bind a5 = plus(a4, x) in
bind a6 = plus(a5, x) in
bind a7 = plus(a6, x) in
bind a8 = plus(a7, x) in
bind a9 = plus(a8, x) in
bind x = plus(a9, x, a8, x, a7, x, a6, x, a5, x, a4, x, a3, x, a2, x, a1, x) in
bind a1 = plus(x, x) in
bind a2 = plus(a1, x) in
bind a3 = plus(a2, x) in
bind a4 = plus(a3, x) in
bind a5 = plus(a4, x) in
bind a6 = plus(a5, x) in
bind a7 = plus(a6, x) in
bind a8 = plus(a7, x) in
bind a9 = plus(a8, x) in
bind x = plus(a9, x, a8, x, a7, x, a6, x, a5, x, a4, x, a3, x, a2, x, a1, x) in
bind a1 = plus(x, x) in
bind a2 = plus(a1, x) in
bind a3 = plus(a2, x) in
bind a4 = plus(a3, x) in
bind a5 = plus(a4, x) in
bind a6 = plus(a5, x) in
bind a7 = plus(a6, x) in
bind a8 = plus(a7, x) in
bind a9 = plus(a8, x) in
bind x = plus(a9, x, a8, x, a7, x, a6, x, a5, x, a4, x, a3, x, a2, x, a1, x) in
bind a1 = plus(x, x) in
bind a2 = plus(a1, x) in
bind a3 = plus(a2, x) in
bind a4 = plus(a3, x) in
bind a5 = plus(a4, x) in
bind a6 = plus(a5, x) in
bind a7 = plus(a6, x) in
bind a8 = plus(a7, x) in
bind a9 = plus(a8, x) in
bind x = plus(a9, x, a8, x, a7, x, a6, x, a5, x, a4, x, a3, x, a2, x, a1, x) in
bind a1 = plus(x, x) in
bind a2 = plus(a1, x) in
bind a3 = plus(a2, x) in
bind a4 = plus(a3, x) in
bind a5 = plus(a4, x) in
bind a6 = plus(a5, x) in
bind a7 = plus(a6, x) in
bind a8 = plus(a7, x) in
bind a9 = plus(a8, x) in
bind x = plus(a9, x, a8, x, a7, x, a6, x, a5, x, a4, x, a3, x, a2, x, a1, x) in
bind a1 = plus(x, x) in
bind a2 = plus(a1, x) in
bind a3 = plus(a2, x) in
bind a4 = plus(a3, x) in
bind a5 = plus(a4, x) in
bind a6 = plus(a5, x) in
bind a7 = plus(a6, x) in
bind a8 = plus(a7, x) in
bind a9 = plus(a8, x) in
bind x = plus(a9, x, a8, x, a7, x, a6, x, a5, x, a4, x, a3, x, a2, x, a1, x) in
bind a1 = plus(x, x) in
bind a2 = plus(a1, x) in
bind a3 = plus(a2, x) in
bind a4 = plus(a3, x) in
bind a5 = plus(a4, x) in
bind a6 = plus(a5, x) in
bind a7 = plus(a6, x) in
bind a8 = plus(a7, x) in
bind a9 = plus(a8, x) in
bind x = plus(a9, x, a8, x, a7, x, a6, x, a5, x, a4, x, a3, x, a2, x, a1, x) in
bind a1 = plus(x, x) in
bind a2 = plus(a1, x) in
bind a3 = plus(a2, x) in
bind a4 = plus(a3, x) in
bind a5 = plus(a4, x) in
bind a6 = plus(a5, x) in
bind a7 = plus(a6, x) in
bind a8 = plus(a7, x) in
bind a9 = plus(a8, x) in
bind x = plus(a9, x, a8, x, a7, x, a6, x, a5, x, a4, x, a3, x, a2, x, a1, x) in
bind a1 = plus(x, x) in
bind a2 = plus(a1, x) in
bind a3 = plus(a2, x) in
bind a4 = plus(a3, x) in
bind a5 = plus(a4, x) in
bind a6 = plus(a5, x) in
bind a7 = plus(a6, x) in
bind a8 = plus(a7, x) in
bind a9 = plus(a8, x) in
bind x = plus(a9, x, a8, x, a7, x, a6, x, a5, x, a4, x, a3, x, a2, x, a1, x) in
bind a1 = plus(x, x) in
bind a2 = plus(a1, x) in
bind a3 = plus(a2, x) in
bind a4 = plus(a3, x) in
bind a5 = plus(a4, x) in
bind a6 = plus(a5, x) in
bind a7 = plus(a6, x) in
bind a8 = plus(a7, x) in
bind a9 = plus(a8, x) in
bind x = plus(a9, x, a8, x, a7, x, a6, x, a5, x, a4, x, a3, x, a2, x, a1, x) in
bind a1 = plus(x, x) in
bind a2 = plus(a1, x) in
bind a3 = plus(a2, x) in
bind a4 = plus(a3, x) in
bind a5 = plus(a4, x) in
bind a6 = plus(a5, x) in
bind a7 = plus(a6, x) in
bind a8 = plus(a7, x) in
bind a9 = plus(a8, x) in
bind x = plus(a9, x, a8, x, a7, x, a6, x, a5, x, a4, x, a3, x, a2, x, a1, x) in
x
