sd-core/src/prettyprinter/snapshots/sd_core__prettyprinter__spartan__tests__pretty_print_buggy.snap
---
source: sd-core/src/prettyprinter/spartan.rs
expression: expr.to_pretty()
---
lambda(x . lambda(a, y . not(b)))
