sd-core/src/prettyprinter/snapshots/sd_core__prettyprinter__spartan__tests__pretty_print_corrupt.snap
---
source: sd-core/src/prettyprinter/spartan.rs
expression: expr.to_pretty()
---
bind x = 1 in
bind y = plus(x, x . minus(x)) in
y
