sd-core/src/prettyprinter/snapshots/sd_core__prettyprinter__spartan__tests__pretty_print_crashing.snap
---
source: sd-core/src/prettyprinter/spartan.rs
expression: expr.to_pretty()
---
lambda(y . lambda( . plus(y)))
