sd-core/src/prettyprinter/snapshots/sd_core__prettyprinter__spartan__tests__pretty_print_mutual_bad.snap
---
source: sd-core/src/prettyprinter/spartan.rs
expression: expr.to_pretty()
---
bind b = plus(c) in
bind c = minus(a) in
bind a = times(b) in
bind d = not(a) in
d
