sd-core/src/prettyprinter/snapshots/sd_core__prettyprinter__spartan__tests__pretty_print_mutual_poset.snap
---
source: sd-core/src/prettyprinter/spartan.rs
expression: expr.to_pretty()
---
bind b = times(a) in
bind c = minus(b, a) in
bind a = plus(b, c) in
a
